# NobelPrediction

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  error.txt  prompt.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  sitecustomize.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  etl.py  health.py  models.py  predictions.py  reports.py
backend/app/api/v1/: __init__.py  predictions.py  reports.py  system.py  training.py
backend/app/core/: config.py  database.py
backend/app/data/seed/: backtests.json  chemistry_candidates.json  economics_candidates.json  literature_candidates.json  medicine_candidates.json  peace_candidates.json  physics_candidates.json  provenance.json
backend/app/flows/: etl.py  modeling.py
backend/app/models/: __init__.py  entities.py  nobel.py
backend/app/reports/: generators.py
backend/app/schemas/: prediction.py  predictions.py
backend/app/services/: __init__.py  bootstrap.py  data_quality.py  etl.py  modeling.py  prediction_service.py  reports.py  training_service.py
backend/app/utils/: prefect_compat.py
backend/app/workflows/: bootstrap.py
backend/numpy/: __init__.py
backend/pandas/: __init__.py
backend/tests/: test_api.py  test_predictions.py
etl/: __init__.py  pyproject.toml
etl/flows/: seed_physics_flow.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BacktestPanel.tsx  CandidateCard.tsx  FeatureImportanceChart.tsx  PredictionTable.tsx  ProvenanceDrawer.tsx
frontend/src/components/__tests__/: PredictionTable.test.tsx
frontend/src/pages/: CandidatePage.tsx  DashboardPage.tsx
frontend/src/types/: api.ts
infra/scripts/: bootstrap.sh
models/: model_card.md  pyproject.toml
models/training/: train_baseline.py
notebooks/: README.md
shared/data/: backtests_physics.json  physics_candidates.csv  physics_features.csv  physics_provenance.csv
shared/great_expectations/: great_expectations.yml
shared/great_expectations/checkpoints/: physics.yml
shared/great_expectations/expectations/: physics_features.json
