[tool.poetry]
name = "nobel-backend"
version = "0.1.0"
description = "FastAPI backend for Nobel prediction platform"
authors = ["OpenAI Assistant <assistant@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.0"
uvicorn = {extras = ["standard"], version = "0.29.0"}
sqlalchemy = "2.0.29"
psycopg2-binary = "2.9.9"
alembic = "1.13.1"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"
prefect = "2.14.9"
duckdb = "0.10.1"
pandas = "2.2.2"
numpy = "1.26.4"
scikit-learn = "1.4.2"
xgboost = "2.0.3"
lightgbm = "4.3.0"
shap = "0.45.0"
plotly = "5.19.0"
python-dotenv = "1.0.1"
httpx = "0.27.0"
requests = "2.31.0"
reportlab = "4.2.0"
typing-extensions = "4.10.0"
networkx = "3.3"
click = "8.1.7"
great-expectations = "0.18.12"

[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
pytest-asyncio = "0.23.5"
httpx = {version = "0.27.0", extras = ["http2"]}
ruff = "0.3.5"
mypy = "1.9.0"
isort = "5.13.2"
coverage = "7.4.4"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ARG", "C4"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

