[tool.poetry]
name = "nobel-etl"
version = "0.1.0"
description = "Prefect ETL flows for Nobel prediction platform"
authors = ["OpenAI Assistant <assistant@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
prefect = "2.14.9"
duckdb = "0.10.1"
pandas = "2.2.2"
requests = "2.31.0"
python-dotenv = "1.0.1"
beautifulsoup4 = "4.12.3"
great-expectations = "0.18.12"

[tool.poetry.group.dev.dependencies]
ruff = "0.3.5"
pytest = "8.1.1"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

