[tool.poetry]
name = "nobel-models"
version = "0.1.0"
description = "Model training utilities"
authors = ["OpenAI Assistant <assistant@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "1.4.2"
pandas = "2.2.2"
joblib = "1.3.2"
numpy = "1.26.4"
xgboost = "2.0.3"
lightgbm = "4.3.0"
shap = "0.45.0"
plotly = "5.19.0"
click = "8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
ruff = "0.3.5"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

